[metadata]
name = pypan
version = 0.2.2
author = Daniele Linaro
author_email = danielelinaro@gmail.com
description = Python interface to the simulator PAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielelinaro/pypan
project_urls =
    Code = https://github.com/danielelinaro/pypan
    Bug Tracker = https://github.com/danielelinaro/pypan/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy

[options.packages.find]
where = src
